testdata/baselines/reference/submodule/conformance/jsDeclarationsMissingTypeParameters.errors.txt
file.js(12,20): error TS1099: Type argument list cannot be empty.


==== file.js (1 errors) ====
    /**
      * @param {Array=} y desc
      */
    function x(y) { }
    
    // @ts-ignore
    /** @param {function (Array)} func Invoked
     */
    function y(func) { return; }
    
    /**
     * @return {(Array.<> | null)} list of devices
                       ~~
!!! error TS1099: Type argument list cannot be empty.
     */
    function z() { return null ;}
    
    /**
     * 
     * @return {?Promise} A promise
     */
    function w() { return null; }